Зробив стилі для сайту

--- a/lab-5/index.html
+++ b/lab-5/index.html
@@ -3,63 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML + CSS</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <html>
-      <head>
-        <title>Лабораторна робота №6</title>
-        <link rel="stylesheet" href="style.css" />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@700&display=swap"
-          rel="stylesheet"
-        />
-      </head>
-      <body>
-        <h1>Лабораторна робота №6: CSS властивості ч.#2</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p class="double-line">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          <a href="link.html">eiusmod tempor</a> incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+    <h1 id="my_title">Лабораторна робота №5: селектори</h1>
 
-        <h2>Наші переваги</h2>
-        <ul class="our-adv">
-          <li>Перевага 1</li>
-          <li>
-            Перевага 2
-            <ul>
-              <li>Підпункт 2.1</li>
-              <li>Підпункт 2.2</li>
-            </ul>
-          </li>
-          <li>Перевага 3</li>
+    <p class="bold">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      <a href="link.html">eiusmod tempor</a> incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+      qui officia deserunt mollit anim id est laborum.
+    </p>
+
+    <h2>Наші переваги</h2>
+    <ul>
+      <li>Перевага 1</li>
+      <li>
+        Перевага 2
+        <ul>
+          <li>Підпункт 2.1</li>
+          <li>Підпункт 2.2</li>
         </ul>
+      </li>
+      <li>Перевага 3</li>
+    </ul>
 
-        <h2>Наші контакти</h2>
-        <p class="ruler">Довжина: 150px</p>
-        <div class="mail-box">
-          <p>
-            Наша пошта:
-            <a href="mailto:name.surname@student.uzhnu.edu.ua"
-              >name.surname@student.uzhnu.edu.ua</a
-            >
-          </p>
-        </div>
-      </body>
-    </html>
+    <h2>Наші цілі</h2>
+    <ol class="goal-list">
+      <li class="list__item"><span>Ціль 1</span></li>
+      <li class="list__item"><span>Ціль 2</span></li>
+      <li class="list__item bold"><span>ЦІЛЬ 3</span></li>
+      <li class="list__item bold"><span>А ЦЕ ЦІЛЬ 4</span></li>
+    </ol>
+
+    <h2>Завантажити файли</h2>
+    <ol>
+      <li><a href="file1.pdf">Файл для завантаження 1</a></li>
+      <li><a href="file2.pdf">Файл для завантаження 2</a></li>
+      <li><a href="file3.docx">Файл для завантаження 3</a></li>
+      <li><a href="file4.docx">Файл для завантаження 4</a></li>
+      <li><a href="file5.pdf">Файл для завантаження 5</a></li>
+    </ol>
+
+    <p>Написати <a href="mailto:student@student.uzhnu.edu.ua">нам листа</a></p>
+
+    <p>
+      За посиланням нижче ви можете переглянути
+      <strong>відомості про нашу компанію:</strong>
+    </p>
+
+    <a href="about.html">Про нас</a>
   </body>
 </html>
